<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Шифр Цезаря"
        android:textSize="24sp"
        android:layout_marginTop="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите текст для шифрования"/>

    <EditText
        android:id="@+id/keyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Ключ (число сдвига)"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/encryptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4128bf"
            android:text="Зашифровать"/>
        <Button
            android:id="@+id/decryptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4128bf"
            android:layout_marginStart="16dp"
            android:text="Расшифровать"/>
    </LinearLayout>

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Результат:"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#4128bf"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="Назад в меню"/>

</LinearLayout>