<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RSAActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/inputTextRSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Введите текст для шифрования"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/generateKeysButtonRSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4128bf"
                android:text="Сгенерировать ключи"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/publicKeyTextRSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Открытый ключ:"
                android:layout_marginBottom="8dp"
                android:textIsSelectable="true"/>

            <TextView
                android:id="@+id/privateKeyTextRSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Закрытый ключ:"
                android:layout_marginBottom="16dp"
                android:textIsSelectable="true"/>

            <Button
                android:id="@+id/encryptButtonRSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4128bf"
                android:text="Зашифровать (открытым ключом)"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/encryptedResultTextRSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Зашифрованный текст:"
                android:layout_marginBottom="16dp"
                android:textIsSelectable="true"/>

            <Button
                android:id="@+id/decryptButtonRSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#4128bf"
                android:text="Расшифровать (закрытым ключом)"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/decryptedResultTextRSA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Расшифрованный текст:"
                android:layout_marginBottom="32dp"
                android:textIsSelectable="true"/>

            <Button
                android:id="@+id/backButtonRSA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#4128bf"
                android:layout_gravity="center_horizontal"
                android:text="Назад в меню"
                android:layout_marginBottom="64dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>